# hackathon-latinoamericano-2021

./: Cargo.toml
src/: interpolation.rs  main.rs
src/bot/: actions.rs  mod.rs  types.rs
