[package]
name = "chatbot"
version = "0.1.0"
authors = ["Fernando Bombardelli da Silva <bombardelli.f@mailbox.tu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
